// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoCallQoe Table should render no data when no data is returned 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="styledComponents__Wrapper-sc-1abm7iv-12 gnXEKI"
      style="--sticky-offset: 0px; --sticky-has-actions: 0; --sticky-has-filters: 1;"
    >
      <div
        class="styledComponents__Header-sc-1abm7iv-10 lKtIj"
      >
        <div>
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 12px;"
            >
              <span
                class="ant-input-affix-wrapper styledComponents__SearchInput-sc-1abm7iv-3"
                style="width: 292px;"
              >
                <span
                  class="ant-input-prefix"
                >
                  <svg
                    data-testid="SearchOutlined"
                  />
                </span>
                <input
                  class="ant-input"
                  placeholder="Search Test Call Name"
                  type="text"
                  value=""
                />
                <span
                  class="ant-input-suffix"
                >
                  <span
                    class="ant-input-clear-icon ant-input-clear-icon-hidden"
                    role="button"
                    tabindex="-1"
                  >
                    <span
                      aria-label="close-circle"
                      class="anticon anticon-close-circle"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="close-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <div
                class="ant-select styledComponents__FilterSelect-sc-1abm7iv-4 ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                data-testid="options-selector"
                style="width: 200px;"
              >
                <div
                  class="ant-select-selector"
                >
                  <div
                    class="ant-select-selection-overflow"
                  >
                    <div
                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                      style="opacity: 1; order: 0;"
                    >
                      <div
                        class="ant-select-selection-search"
                        style="width: 0px;"
                      >
                        <input
                          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          type="search"
                          unselectable="on"
                          value=""
                        />
                        <span
                          aria-hidden="true"
                          class="ant-select-selection-search-mirror"
                        >
                           
                        </span>
                      </div>
                    </div>
                  </div>
                  <span
                    class="ant-select-selection-placeholder"
                  >
                    Status
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styledComponents__HeaderComps-sc-1abm7iv-11 gashjk"
        />
      </div>
      <div
        class="ant-pro-table"
      >
        <div
          class="ant-pro-card"
        >
          <div
            class="ant-pro-card-body"
            style="padding-top: 0px;"
          >
            <div
              class="ant-pro-table-list-toolbar"
            />
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-middle ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                        style="overflow-x: auto; overflow-y: hidden;"
                      >
                        <table
                          style="width: 692px; min-width: 100%; table-layout: fixed;"
                        >
                          <colgroup>
                            <col
                              class="ant-table-selection-col"
                            />
                            <col
                              style="width: 120px;"
                            />
                            <col
                              style="width: 160px;"
                            />
                            <col
                              style="width: 160px;"
                            />
                            <col
                              style="width: 85px;"
                            />
                            <col
                              style="width: 85px;"
                            />
                            <col
                              style="width: 50px;"
                            />
                            <col
                              style="width: 32px;"
                            />
                          </colgroup>
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell ant-table-selection-column react-resizable"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Test Call Name
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                aria-sort="descending"
                                class="ant-table-cell ant-table-column-sort ant-table-column-has-sorters react-resizable"
                                style="text-align: center;"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Created Time
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down active"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                style="text-align: center;"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Start Time
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                style="text-align: center;"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Participants
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                style="text-align: center;"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Status
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                style="text-align: center;"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    QoE
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first react-resizable"
                                style="position: sticky; right: 0px;"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              aria-hidden="true"
                              class="ant-table-measure-row"
                              style="height: 0px; font-size: 0px;"
                            >
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-placeholder"
                            >
                              <td
                                class="ant-table-cell"
                                colspan="8"
                              >
                                <div
                                  class="ant-table-expanded-row-fixed"
                                  style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                />
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VideoCallQoe Table should render table 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="styledComponents__Wrapper-sc-1abm7iv-12 gnXEKI"
      style="--sticky-offset: 0px; --sticky-has-actions: 0; --sticky-has-filters: 1;"
    >
      <div
        class="ant-pro-table"
      >
        <div
          class="ant-pro-card"
        >
          <div
            class="ant-pro-card-body"
            style="padding-top: 0px;"
          >
            <div
              class="ant-pro-table-list-toolbar"
            />
            <div
              class="ant-pro-table-alert"
            >
              <div
                class="ant-alert ant-alert-info ant-alert-no-icon"
                data-show="true"
                role="alert"
              >
                <div
                  class="ant-alert-content"
                >
                  <div
                    class="ant-alert-message"
                  >
                    <div
                      class="ant-pro-table-alert-info"
                    >
                      <div
                        class="ant-pro-table-alert-info-content"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 32px;"
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-right: 6px;"
                              >
                                <span>
                                  1 selected
                                </span>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                <button
                                  class="ant-btn ant-btn-default ant-btn-icon-only styledComponents__CloseButton-sc-1abm7iv-5 dRUGlG"
                                  data-id="table-clear-btn"
                                  title="Clear selection"
                                  type="button"
                                >
                                  <svg
                                    data-testid="CancelCircle"
                                  />
                                </button>
                              </div>
                            </div>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-space ant-space-horizontal ant-space-align-center"
                            >
                              <div
                                class="ant-space-item"
                              >
                                <button
                                  class="ant-btn ant-btn-link ant-btn-sm styledComponents__Button-sc-zk1lj8-0 ibsWZY"
                                  type="button"
                                >
                                  <span>
                                    Delete
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-middle ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                        style="overflow-x: auto; overflow-y: hidden;"
                      >
                        <table
                          style="width: 692px; min-width: 100%; table-layout: fixed;"
                        >
                          <colgroup>
                            <col
                              class="ant-table-selection-col"
                            />
                            <col
                              style="width: 120px;"
                            />
                            <col
                              style="width: 160px;"
                            />
                            <col
                              style="width: 160px;"
                            />
                            <col
                              style="width: 85px;"
                            />
                            <col
                              style="width: 85px;"
                            />
                            <col
                              style="width: 50px;"
                            />
                            <col
                              style="width: 32px;"
                            />
                          </colgroup>
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell ant-table-selection-column react-resizable"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Test Call Name
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                aria-sort="descending"
                                class="ant-table-cell ant-table-column-sort ant-table-column-has-sorters react-resizable"
                                style="text-align: center;"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Created Time
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down active"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                style="text-align: center;"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Start Time
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                style="text-align: center;"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Participants
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                style="text-align: center;"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    Status
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-column-has-sorters react-resizable"
                                style="text-align: center;"
                                tabindex="0"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="ant-table-column-sorters"
                                >
                                  <span
                                    class="ant-table-column-title"
                                  >
                                    QoE
                                  </span>
                                  <span
                                    class="ant-table-column-sorter ant-table-column-sorter-full"
                                  >
                                    <span
                                      class="ant-table-column-sorter-inner"
                                    >
                                      <span
                                        aria-label="caret-up"
                                        class="anticon anticon-caret-up ant-table-column-sorter-up"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        aria-label="caret-down"
                                        class="anticon anticon-caret-down ant-table-column-sorter-down"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="caret-down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="0 0 1024 1024"
                                          width="1em"
                                        >
                                          <path
                                            d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                              <th
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first react-resizable"
                                style="position: sticky; right: 0px;"
                              >
                                <div
                                  class="styledComponents__ResizableHover-sc-1abm7iv-8"
                                />
                                <div
                                  class="styledComponents__ResizableHandle-sc-1abm7iv-9"
                                />
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              aria-hidden="true"
                              class="ant-table-measure-row"
                              style="height: 0px; font-size: 0px;"
                            >
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                              <td
                                style="padding: 0px; border: 0px; height: 0px;"
                              >
                                <div
                                  style="height: 0px; overflow: hidden;"
                                >
                                   
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0 ant-table-row-selected"
                              data-row-key="74"
                            >
                              <td
                                class="ant-table-cell ant-table-selection-column ant-table-cell-row-hover"
                              >
                                <label
                                  class="ant-radio-wrapper ant-radio-wrapper-checked"
                                >
                                  <span
                                    class="ant-radio ant-radio-checked"
                                  >
                                    <input
                                      class="ant-radio-input"
                                      type="radio"
                                      value=""
                                    />
                                    <span
                                      class="ant-radio-inner"
                                    />
                                  </span>
                                </label>
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-row-hover"
                              >
                                Test call
                              </td>
                              <td
                                class="ant-table-cell ant-table-column-sort ant-table-cell-row-hover"
                                style="text-align: center;"
                              >
                                04/12/2023 09:56:58
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-row-hover"
                                style="text-align: center;"
                              >
                                -
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-row-hover"
                                style="text-align: center;"
                              >
                                -
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-row-hover"
                                style="text-align: center;"
                              >
                                <span
                                  class="sc-ftvSup blkwvB"
                                >
                                  Invalid
                                </span>
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-row-hover"
                                style="text-align: center;"
                              >
                                -
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first ant-table-cell-row-hover"
                                style="position: sticky; right: 0px;"
                              />
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="57"
                            >
                              <td
                                class="ant-table-cell ant-table-selection-column"
                              >
                                <label
                                  class="ant-radio-wrapper"
                                >
                                  <span
                                    class="ant-radio"
                                  >
                                    <input
                                      class="ant-radio-input"
                                      type="radio"
                                      value=""
                                    />
                                    <span
                                      class="ant-radio-inner"
                                    />
                                  </span>
                                </label>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/tenant-id/t/analytics/videoCallQoe/57"
                                >
                                  Asraf - Test1
                                </a>
                              </td>
                              <td
                                class="ant-table-cell ant-table-column-sort"
                                style="text-align: center;"
                              >
                                04/11/2023 04:39:28
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                04/11/2023 04:40:20
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                2
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                Ended
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <span
                                  class="styledComponents__Pill-sc-j61ge1-0 chVxOo"
                                  type="negative"
                                >
                                  Bad
                                </span>
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                style="position: sticky; right: 0px;"
                              />
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="13"
                            >
                              <td
                                class="ant-table-cell ant-table-selection-column"
                              >
                                <label
                                  class="ant-radio-wrapper"
                                >
                                  <span
                                    class="ant-radio"
                                  >
                                    <input
                                      class="ant-radio-input"
                                      type="radio"
                                      value=""
                                    />
                                    <span
                                      class="ant-radio-inner"
                                    />
                                  </span>
                                </label>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <a
                                  href="/tenant-id/t/analytics/videoCallQoe/13"
                                >
                                  ACX_test
                                </a>
                              </td>
                              <td
                                class="ant-table-cell ant-table-column-sort"
                                style="text-align: center;"
                              >
                                04/06/2023 09:55:41
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                04/06/2023 09:56:21
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                2
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                Ended
                              </td>
                              <td
                                class="ant-table-cell"
                                style="text-align: center;"
                              >
                                <span
                                  class="styledComponents__Pill-sc-j61ge1-0 NKxEo"
                                  type="positive"
                                >
                                  Good
                                </span>
                              </td>
                              <td
                                class="ant-table-cell ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                style="position: sticky; right: 0px;"
                              />
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
